Fixed layout issues
Fixed layout issues when zooming and with font changes and such

--- a/collab-app/css/globals.css
+++ b/collab-app/css/globals.css
@@ -22,6 +22,14 @@
   }
 }
 
+html,
+body,
+#__next {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
